--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,5 +1,7 @@
 .app {
-	background-color: rgb(229, 234, 241);
-	min-height: 100vh;
-	
+//  background-color: rgb(229, 234, 241);
+
+
+background-color: #F2F2F2;
+  min-height: 100vh;
 }
