--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,34 +1,34 @@
-.nav{
+.nav {
+background-color: white;
+  .nav-content {
+    padding: 1em;
+	
 
+    .nav-links {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-.nav-content {
-	padding: 1em;
+      & > a {
+       color: #0D0D0D;
+		font-size: 1.1rem;
+      }
 
-	.nav-links {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		
+      & > a:first-child {
+        flex-grow: 1;
+		  
+      }
 
-		& > a {
-			color: black;
-		}
+      & > a:nth-child(2) {
+        margin-right: 1em;
+      }
 
-		& > a:first-child {
-			flex-grow: 1;
-		}
-
-		& > a:nth-child(2) {
-			margin-right: 1em;
-		}
-
-		& > a:last-child {
-			border: 1px solid rgba(82, 196, 26, 1);
-			color:rgba(82, 196, 26, 1) ;
-			border-radius: 5px;
-			padding: .5em .7em ;
-		}
-
-	}
-}
+      & > a:last-child {
+        border: 2px solid #99A63C;
+        color: #99A63C;
+        border-radius: 6px;
+        padding: 0.6em 0.8em;
+      }
+    }
+  }
 }
