--- a/src/components/postsItem/postsItem.module.scss
+++ b/src/components/postsItem/postsItem.module.scss
@@ -1,53 +1,60 @@
 
-	.posts-item {
-		padding: 1em;
-		filter: drop-shadow(0px 4px 4px rgba(0,0,0,0.25));
-		height: 140px;
+.posts-item {
+  padding: 1em 1.2em;
+  margin-top: .5em;
+  background-color: rgba(255,255,255);
+  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
 
-		&__title {
-		color: rgba(24, 144, 255, 1);
-		font-size: 20px ;
-		}
 
-		&__tags {
-			display: flex;
-			flex-wrap: wrap;
+//height: 150px;
 
-		.tag {
-			background-color: white;
-			border-color: black
-			}
-		}
+  &__title {
+    color: #66ADD9;
+    font-size: 20px;
+  }
 
-		&__content {
-			max-width: 80%;
-			//margin: 0;
-			//margin-top: 1em;
-			};
+  &__tags {
+    display: flex;
+    flex-wrap: wrap;
 
-		.person-info {
-			display: flex;
-			align-items: center;
+    .tag {
+      background-color: white;
+      border-color: #112430;
+		border-radius: 0;
+		border-radius: 2px;
 
-			&__description {
-				margin-right: 9px;
-
-				& > div:first-child{
-					font-size: 18px ;
-				}
-
-				& > div:last-child {
-					display: flex;
-					justify-content: flex-end;
-					color: rgba(0,0,0,0.5) ;
-				}
-			}
-
-			&__avatar {
-
-			}
+		& > a {
+			color: #39454e;
 		}
 	}
 
+  }
 
+  &__content {
+    max-width: 80%;
+	 margin: 0;
+	 min-height: 70px;
+  }
 
+  .person-info {
+    display: flex;
+    align-items: center;
+
+    &__description {
+      margin-right: 9px;
+
+      & > div:first-child {
+        font-size: 18px;
+      }
+
+      & > div:last-child {
+        display: flex;
+        justify-content: flex-end;
+     
+      }
+    }
+
+    &__avatar {
+    }
+  }
+}
