--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,31 @@
- @import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@400;500&display=swap');
 
-*{
-	font-family: 'Inter', sans-serif; 
+* {
+  font-family: 'Inter', sans-serif;
+  color: #0D0D0D;
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 body {
-	max-width: 1330px;
-	margin: 0 auto;
+  max-width: 1330px;
+  margin: 0 auto;
+  background-color: #F2F2F2;
+
+
+[class~='ant-card'] {
+	border-radius: 0;
+
+	[class~='ant-card-head'] {
+	  border: none;
+	  padding: 0;
+	}
+
+	[class~='ant-card-body'] {
+	  padding: 0;
+	  padding-top: 1em;
+	  border-radius: 0;
+	}
+ }
 }
