--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,7 +1,6 @@
 .app {
-//  background-color: rgb(229, 234, 241);
+  //  background-color: rgb(229, 234, 241);
 
-
-background-color: #F2F2F2;
+  background-color: #f2f2f2;
   min-height: 100vh;
 }
