--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -1,8 +1,7 @@
 .nav {
-background-color: white;
+  background-color: white;
   .nav-content {
     padding: 1em;
-	
 
     .nav-links {
       display: flex;
@@ -10,13 +9,12 @@ background-color: white;
       align-items: center;
 
       & > a {
-       color: #0D0D0D;
-		font-size: 1.1rem;
+        color: #0d0d0d;
+        font-size: 1.1rem;
       }
 
       & > a:first-child {
         flex-grow: 1;
-		  
       }
 
       & > a:nth-child(2) {
@@ -24,8 +22,8 @@ background-color: white;
       }
 
       & > a:last-child {
-        border: 2px solid #99A63C;
-        color: #99A63C;
+        border: 2px solid #99a63c;
+        color: #99a63c;
         border-radius: 6px;
         padding: 0.6em 0.8em;
       }
