--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 
 * {
   font-family: 'Inter', sans-serif;
-  color: #0D0D0D;
+  color: #0d0d0d;
 }
 a {
   text-decoration: none;
@@ -11,21 +11,20 @@ a {
 body {
   max-width: 1330px;
   margin: 0 auto;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 
+  [class~='ant-card'] {
+    border-radius: 0;
 
-[class~='ant-card'] {
-	border-radius: 0;
+    [class~='ant-card-head'] {
+      border: none;
+      padding: 0;
+    }
 
-	[class~='ant-card-head'] {
-	  border: none;
-	  padding: 0;
-	}
-
-	[class~='ant-card-body'] {
-	  padding: 0;
-	  padding-top: 1em;
-	  border-radius: 0;
-	}
- }
+    [class~='ant-card-body'] {
+      padding: 0;
+      padding-top: 1em;
+      border-radius: 0;
+    }
+  }
 }
