--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -3,6 +3,16 @@
   .nav-content {
     padding: 1em;
 
+	 .person-info {
+		display: flex;
+		align-items: center;
+		margin-right: 1.5em;
+
+		&__user-name {
+			margin-right: .5em;
+		}
+	 }
+
     .nav-links {
       display: flex;
       justify-content: space-between;
@@ -21,12 +31,26 @@
         margin-right: 1em;
       }
 
-      & > a:last-child {
+		&> a:last-child, button {
+			border-radius: 6px;
+			padding: 0.6em 0.8em;
+		}
+
+		& > a.create-article {
+			padding: .4em .6em;
+			margin-right: 1.5em;
+		}
+
+      & > a.sign-up, .create-article {
         border: 2px solid #99a63c;
         color: #99a63c;
-        border-radius: 6px;
-        padding: 0.6em 0.8em;
-      }
+        }
+
+		  & > button.log-out {
+			border: 2px solid rgba(0, 0, 0, 0.75);
+			color:  rgba(0, 0, 0, 0.75);
+			background: none
+			}
     }
   }
 }
