--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -3,15 +3,15 @@
   .nav-content {
     padding: 1em;
 
-	 .person-info {
-		display: flex;
-		align-items: center;
-		margin-right: 1.5em;
+    .person-info {
+      display: flex;
+      align-items: center;
+      margin-right: 1.5em;
 
-		&__user-name {
-			margin-right: .5em;
-		}
-	 }
+      &__user-name {
+        margin-right: 0.5em;
+      }
+    }
 
     .nav-links {
       display: flex;
@@ -31,26 +31,28 @@
         margin-right: 1em;
       }
 
-		&> a:last-child, button {
-			border-radius: 6px;
-			padding: 0.6em 0.8em;
-		}
+      & > a:last-child,
+      button {
+        border-radius: 6px;
+        padding: 0.6em 0.8em;
+      }
 
-		& > a.create-article {
-			padding: .4em .6em;
-			margin-right: 1.5em;
-		}
+      & > a.create-article {
+        padding: 0.4em 0.6em;
+        margin-right: 1.5em;
+      }
 
-      & > a.sign-up, .create-article {
+      & > a.sign-up,
+      .create-article {
         border: 2px solid #99a63c;
         color: #99a63c;
-        }
+      }
 
-		  & > button.log-out {
-			border: 2px solid rgba(0, 0, 0, 0.75);
-			color:  rgba(0, 0, 0, 0.75);
-			background: none
-			}
+      & > button.log-out {
+        border: 2px solid rgba(0, 0, 0, 0.75);
+        color: rgba(0, 0, 0, 0.75);
+        background: none;
+      }
     }
   }
 }
