--- a/src/components/articleDetails/articleDetails.module.scss
+++ b/src/components/articleDetails/articleDetails.module.scss
@@ -5,26 +5,41 @@
   padding: 1.5em;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
   box-sizing: border-box;
-
+  position: relative;
   [class~='ant-card'] {
     box-shadow: none;
   }
 
   background-color: white;
 
+ & > div:first-child > div:last-child > div > div {
+	display:flex;
+ }
+
   & > div:first-child {
     padding: 0;
     filter: none;
+
     p {
       color: rgba(0, 0, 0, 0.5);
       min-height: 0;
+		max-width: 75%;
     }
+	}
+
+  .article-body {
+	p,
+	h2,
+	h1,
+	li {
+	  color: rgba(0, 0, 0, 0.75);
+	}
   }
 
-  .article-body p,
-  h2,
-  h1,
-  li {
-    color: rgba(0, 0, 0, 0.75);
-  }
 }
+
+.spinner {
+
+	width: 100%;
+	margin-top: 5em;
+  }
