add rateItem func

--- a/src/components/rateItem/rateItem.module.scss
+++ b/src/components/rateItem/rateItem.module.scss
@@ -1,10 +1,8 @@
-
 .rate-container {
-	position: relative;
-	bottom: 1px;
-.rate {
-color: red;
- &__icon {
-//color: red;
+  position: relative;
+  bottom: 1px;
+  .rate {
+    color: red;
+	 }
+
 }
-}}
