--- a/src/components/articlesItem/articlesItem.module.scss
+++ b/src/components/articlesItem/articlesItem.module.scss
@@ -4,13 +4,17 @@
   background-color: rgba(255, 255, 255);
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
 
-  //height: 150px;
+&> div:first-child > div:first-child {
+
+	align-items: flex-start;
+}
 
   .articles-item-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     min-height: 70px;
+	
   }
 
   .buttons {
@@ -64,9 +68,11 @@
   .person-info {
     display: flex;
     align-items: center;
+	
 
     &__description {
       margin-right: 9px;
+	
 
       & > div:first-child {
         font-size: 18px;
