--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -25,7 +25,6 @@
 
       & > a:first-child {
         flex-grow: 1;
-
       }
 
       & > a:nth-child(2) {
@@ -47,6 +46,7 @@
       .create-article {
         border: 2px solid #99a63c;
         color: #99a63c;
+		  border-radius: 5px;
       }
 
       & > button.log-out {
