--- a/src/components/newArticle/newArticle.module.scss
+++ b/src/components/newArticle/newArticle.module.scss
@@ -1,22 +1,11 @@
 .newArticle-container {
-  justify-content: center;
-  flex-direction: column;
-
-  align-items: center;
-  display: flex;
-  padding: 2em;
+	composes: form-container from '../../styles/form.scss';
+}
 
   .newArticle-main {
-    background-color: white;
-    padding: 1.5em;
-    box-shadow: 0px 0.6087964177131653px 2.9332919120788574px 0px rgba(0, 0, 0, 0.0197),
-      0px 1.4630224704742432px 7.049108028411865px 0px rgba(0, 0, 0, 0.0283),
-      0px 2.7547414302825928px 13.272845268249512px 0px rgba(0, 0, 0, 0.035),
-      0px 4.91398811340332px 23.67648696899414px 0px rgba(0, 0, 0, 0.0417),
-      0px 9.19107437133789px 44.28426742553711px 0px rgba(0, 0, 0, 0.0503), 0px 22px 106px 0px rgba(0, 0, 0, 0.07);
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 20px;
+	composes: form-main from '../../styles/form.scss';
+	max-width: fit-content;
+
 
     .deleteButton {
       position: relative;
@@ -67,4 +56,4 @@
       }
     }
   }
-}
+
