--- a/src/components/registerForm/registerForm.module.scss
+++ b/src/components/registerForm/registerForm.module.scss
@@ -1,21 +1,10 @@
 .registerForm-container {
-  justify-content: center;
-  display: flex;
-  padding-top: 1em;
-  padding-bottom: 1em;
+	composes: form-container from '../../styles/form.scss';
+}
 
   .registerForm-main {
-    background-color: white;
-    padding: 1.5em;
-    text-align: center;
-    box-shadow: 0px 0.6087964177131653px 2.9332919120788574px 0px rgba(0, 0, 0, 0.0197),
-      0px 1.4630224704742432px 7.049108028411865px 0px rgba(0, 0, 0, 0.0283),
-      0px 2.7547414302825928px 13.272845268249512px 0px rgba(0, 0, 0, 0.035),
-      0px 4.91398811340332px 23.67648696899414px 0px rgba(0, 0, 0, 0.0417),
-      0px 9.19107437133789px 44.28426742553711px 0px rgba(0, 0, 0, 0.0503), 0px 22px 106px 0px rgba(0, 0, 0, 0.07);
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 20px;
+	composes: form-main from '../../styles/form.scss';
+	text-align: center;
 
     .registerForm {
       padding-top: 1em;
@@ -36,4 +25,4 @@
       }
     }
   }
-}
+
