--- a/src/components/updateProfileForm/updateProfileForm.module.scss
+++ b/src/components/updateProfileForm/updateProfileForm.module.scss
@@ -1,23 +1,11 @@
+@use '../../styles/shadow';
+
 .updateProfileForm-container {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  padding-top: 1em;
-  padding-bottom: 1em;
-align-items: center;
+	composes: form-container from '../../styles/form.scss';
+}
   .updateProfileForm-main {
-    background-color: white;
-    padding: 1.5em;
-    text-align: center;
-    box-shadow: 0px 0.6087964177131653px 2.9332919120788574px 0px rgba(0, 0, 0, 0.0197),
-      0px 1.4630224704742432px 7.049108028411865px 0px rgba(0, 0, 0, 0.0283),
-      0px 2.7547414302825928px 13.272845268249512px 0px rgba(0, 0, 0, 0.035),
-      0px 4.91398811340332px 23.67648696899414px 0px rgba(0, 0, 0, 0.0417),
-      0px 9.19107437133789px 44.28426742553711px 0px rgba(0, 0, 0, 0.0503), 0px 22px 106px 0px rgba(0, 0, 0, 0.07);
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 20px;
-max-width: 400px;
+	composes: form-main from '../../styles/form.scss';
+	text-align: center;
     .updateProfileForm {
       padding-top: 1em;
 
@@ -38,4 +26,4 @@ max-width: 400px;
       }
     }
   }
-}
+
