--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -35,6 +35,7 @@
       button {
         border-radius: 6px;
         padding: 0.6em 0.8em;
+		  cursor: pointer;
       }
 
       & > a.create-article {
