createRouter, fix pagination

--- a/src/components/articleDetails/articleDetails.module.scss
+++ b/src/components/articleDetails/articleDetails.module.scss
@@ -27,6 +27,7 @@
       color: rgba(0, 0, 0, 0.5);
       min-height: 0;
       max-width: 75%;
+	
     }
   }
 
@@ -36,6 +37,7 @@
     h1,
     li {
       color: rgba(0, 0, 0, 0.75);
+		word-wrap:break-word;
     }
   }
 }
