--- a/src/components/articlesItem/articlesItem.module.scss
+++ b/src/components/articlesItem/articlesItem.module.scss
@@ -14,6 +14,11 @@
     align-items: center;
     justify-content: space-between;
     min-height: 70px;
+
+	 p{
+		word-wrap:break-word;
+	 }
+
   }
 
   .buttons {
