--- a/src/components/loginForm/loginForm.module.scss
+++ b/src/components/loginForm/loginForm.module.scss
@@ -1,16 +1,16 @@
-.loginForm-container {
-  composes: form-container from '../../styles/form.scss';
+.loginFormContainer {
+  composes: formContainer from '../../styles/form.scss';
 }
-.loginForm-inner {
-  composes: form-main from '../../styles/form.scss';
+.loginFormInner {
+  composes: formMain from '../../styles/form.scss';
 
   .loginForm {
-    &__input {
+    .loginFormInput {
       padding: 0.5em;
       min-width: 260px;
     }
 
-    &__button {
+    .loginFormButton {
       display: block;
       width: 100%;
       margin-bottom: 1em;
