--- a/src/components/articlesItem/articlesItem.module.scss
+++ b/src/components/articlesItem/articlesItem.module.scss
@@ -1,5 +1,5 @@
 @use '../../styles/shadow.scss';
-.articles-item {
+.articlesItem {
   padding: 1em 1.2em;
   margin-top: 0.5em;
   background-color: rgba(255, 255, 255);
@@ -9,7 +9,7 @@
     align-items: flex-start;
   }
 
-  .articles-item-container {
+  .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -42,12 +42,12 @@
     }
   }
 
-  &__title {
+  .title {
     color: #66add9;
     font-size: 20px;
   }
 
-  &__tags {
+  .tags {
     display: flex;
     flex-wrap: wrap;
 
@@ -63,7 +63,7 @@
     }
   }
 
-  &__content {
+  .content {
     max-width: 80%;
     margin: 0;
   }
@@ -72,7 +72,7 @@
     display: flex;
     align-items: center;
 
-    &__description {
+    .description {
       margin-right: 9px;
 
       & > div:first-child {
@@ -85,7 +85,7 @@
       }
     }
 
-    &__avatar {
+    .avatar {
     }
   }
 }
