--- a/src/components/newArticle/newArticle.module.scss
+++ b/src/components/newArticle/newArticle.module.scss
@@ -1,9 +1,9 @@
-.newArticle-container {
-  composes: form-container from '../../styles/form.scss';
+.newArticleContainer {
+  composes: formContainer from '../../styles/form.scss';
 }
 
-.newArticle-main {
-  composes: form-main from '../../styles/form.scss';
+.newArticleMain {
+  composes: formMain from '../../styles/form.scss';
   max-width: fit-content;
 
   .deleteButton {
@@ -32,22 +32,22 @@
       color: rgba(24, 144, 255, 1);
     }
   }
-
+  .newArticleTitle {
+	font-size: 24px;
+	font-weight: bold;
+	text-align: center;
+	margin: 0;
+	margin-bottom: 1em;
+ }
   .newArticle {
-    &__title {
-      font-size: 24px;
-      font-weight: bold;
-      text-align: center;
-      margin: 0;
-      margin-bottom: 1em;
-    }
+   
 
-    &__input {
+    .newArticleInput {
       padding: 0.5em;
       min-width: 600px;
     }
 
-    &__submit-button {
+    .submitButton {
       width: 45%;
       span {
         color: white;
