--- a/src/components/updateProfileForm/updateProfileForm.module.scss
+++ b/src/components/updateProfileForm/updateProfileForm.module.scss
@@ -1,15 +1,15 @@
 @use '../../styles/shadow';
 
 .updateProfileForm-container {
-  composes: form-container from '../../styles/form.scss';
+  composes: formContainer from '../../styles/form.scss';
 }
-.updateProfileForm-main {
-  composes: form-main from '../../styles/form.scss';
+.updateProfileFormMain {
+  composes: formMain from '../../styles/form.scss';
   text-align: center;
   .updateProfileForm {
     padding-top: 1em;
 
-    &__button {
+    .updateProfileFormButton {
       width: 100%;
       margin-top: 1em;
       margin-bottom: 1em;
@@ -19,7 +19,7 @@
       }
     }
 
-    &__input {
+    .updateProfileFormInput {
       padding: 0.7em;
       margin-bottom: 0.5em;
       min-width: 350px;
