--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -34,7 +34,7 @@
       & > a:last-child,
       button {
         border-radius: 6px;
-        padding: 0.7em .9em;
+        padding: 0.7em 0.9em;
         cursor: pointer;
       }
 
